<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
        <!--<TextView-->
        <!--android:id="@+id/not_support_preview_txv"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_margin="10dp"-->
        <!--android:text="@string/text_not_support_preview"-->
        <!--android:textColor="@color/secondary_text"-->
        <!--android:textSize="@dimen/navigation_size"-->
        <!--android:visibility="gone"-->
        <!--/>-->
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_height"
        android:layout_alignParentTop="true"
        android:background="@color/half_transparent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:background="@drawable/selector_half_transparent2gray"
            android:src="@drawable/back"
            android:visibility="gone" />

        <TextClock
            android:id="@+id/time_info_txv"
            style="@style/customTextviewStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/back_btn"
            android:format12Hour="yyyy/MM/dd HH:mm:ss"
            android:format24Hour="yyyy/MM/dd HH:mm:ss"
            android:gravity="center_vertical"
            android:textSize="@dimen/first_title_size" />

        <TextView
            android:id="@+id/video_size_txv"
            style="@style/customTextviewStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/time_info_txv"
            android:gravity="center_vertical"
            android:textSize="@dimen/first_title_size" />

        <!--<TextView-->
        <!--android:id="@+id/wifi_status_txv"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:gravity="center_vertical"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:textSize="@dimen/first_title_size"-->
        <!--android:text="WIFI已连接"-->
        <!--style="@style/customTextviewStyleLight"-->
        <!--/>-->

        <TextView
            android:id="@+id/exit_txv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/selector_transparent2gray"
            android:text="@string/title_exit"
            android:textColor="@color/primary_idle"
            android:textSize="@dimen/navigation_size"
            android:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/status_bar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/record_status_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/rec_vertical"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/sd_card_status_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />
    </LinearLayout>


    <ImageView
        android:id="@+id/lock_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:src="@drawable/ic_unlock" />

    <LinearLayout
        android:id="@+id/action_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/record_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_weight="1"
            android:background="@drawable/selector_half_transparent2gray"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/tigger_rec_btn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/selector_rigger_btn" />
            <TextView
                android:id="@+id/tigger_txv"
                style="@style/customTextviewStyleLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titile_urgent_record" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/audio_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_weight="1"
            android:background="@drawable/selector_half_transparent2gray"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/volume_imv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/record_close_volume_vertical_" />
            <TextView
                style="@style/customTextviewStyleLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titile_audio_control" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/capture_photo_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_weight="1"
            android:background="@drawable/selector_half_transparent2gray"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo_imv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/selector_photo_btn" />

            <TextView
                android:id="@+id/photo_txv"
                style="@style/customTextviewStyleLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/titile_take_photo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/local_file_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_weight="1"
            android:background="@drawable/selector_half_transparent2gray"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/local_video_land" />

            <TextView
                style="@style/customTextviewStyleLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titile_local_file" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tf_file_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_weight="1"
            android:background="@drawable/selector_half_transparent2gray"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/sd_card_land" />

            <TextView
                style="@style/customTextviewStyleLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titile_tf_file" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:layout_weight="1"
            android:background="@drawable/selector_half_transparent2gray"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/bg_home_setting" />

            <TextView
                style="@style/customTextviewStyleLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titile_setting" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/setup_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_transparent"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/setting_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_height"
            android:layout_alignParentTop="true"
            android:background="@color/primary_transparent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/setting_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:background="@drawable/selector_transparent2gray"
                android:padding="10dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/setting_txv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/titile_setting"
                android:textColor="@color/primary_idle"
                android:textSize="@dimen/navigation_size"
                android:visibility="visible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/divier1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/setting_bar"
            android:background="@color/half_transparent_grey" />

        <ListView
            android:id="@+id/setup_menu_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/divier1"
            android:divider="@color/half_transparent_grey"
            android:dividerHeight="1dp"
            android:minHeight="@dimen/item_height" />
    </RelativeLayout>
</RelativeLayout>
